--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <script src="dist/dimple.v2.1.0.js"></script>
   <script type="text/javascript">
     var svg = dimple.newSvg("#chartContainer", 590, 400);
-      d3.tsv("data/movies.csv", function (data) {
-        var csv = d3.csv.parse(data);
-        var myChart = new dimple.chart(svg, csv);
+      d3.csv("data/movies.csv", function (data) {
+        var myChart = new dimple.chart(svg, data);
         myChart.setBounds(60000000, 30000000, 500, 330)
         myChart.addMeasureAxis("x", "Worldwide Gross");
         myChart.addMeasureAxis("y", "Budget");
