--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <script src="dist/dimple.v2.1.0.js"></script>
   <script type="text/javascript">
     var svg = dimple.newSvg("#chartContainer", 590, 400);
-    d3.csv("data/movies.csv", function (data) {
+    var dsv = d3.dsv("|", "text/plain");
+    d3.dsv("data/movies.csv", function (data) {
         var myChart = new dimple.chart(svg, data);
         myChart.setBounds(60, 30, 500, 330)
         myChart.addMeasureAxis("x", "Worldwide Gross");
