--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     var svg = dimple.newSvg("#chartContainer", 590, 400);
     var dsv = d3.dsv("|", "text/plain");
     d3.dsv("data/movies.csv", function (data) {
+        console.table(data);
         var myChart = new dimple.chart(svg, data);
         myChart.setBounds(60, 30, 500, 330)
         myChart.addMeasureAxis("x", "Worldwide Gross");
