--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         myChart.addMeasureAxis("x", "Worldwide Gross");
         myChart.addMeasureAxis("y", "Budget");
         myChart.addMeasureAxis("z", "Opening Weekend");
-        //myChart.addSeries("Opening Weekend", dimple.plot.bubble);
+        myChart.addSeries("Opening Weekend", dimple.plot.bubble);
         myChart.addLegend(200, 10, 360, 20, "right");
         myChart.draw();
       });
