--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         myChart.addMeasureAxis("x", "Worldwide Gross");
         myChart.addMeasureAxis("y", "Budget");
         myChart.addMeasureAxis("z", "Opening Weekend");
-        myChart.addSeries("Opening Weekend", dimple.plot.bubble);
-        myChart.addLegend(200, 10, 360, 20, "right");
+        myChart.addSeries("Film", dimple.plot.bubble);
+        myChart.addLegend(200, 10, 360, 20);
         myChart.draw();
       });
   </script>
