--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         myChart.addMeasureAxis("y", "Budget");
         myChart.addMeasureAxis("z", "Opening Weekend");
         myChart.addSeries("Film", dimple.plot.bubble);
-        myChart.addLegend(200, 10, 360, 20);
+        //myChart.addLegend(200, 10, 360, 20);
         myChart.draw();
       });
   </script>
