--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="dist/dimple.v2.1.0.js"></script>
   <script type="text/javascript">
+  <div></div>
     var svg = dimple.newSvg("#chartContainer", 590, 590);
     var dsv = d3.dsv(";", "text/plain");
     //d3.csv("data/movies.csv", function (data)
