--- a/index.html
+++ b/index.html
@@ -19,4 +19,17 @@
         myChart.draw();
       });
   </script>
+  <script type="text/javascript">
+    var svg = dimple.newSvg("#chartContainer", 590, 400);
+    var dsv = d3.dsv(";", "text/plain");
+    dsv("data/movies.csv", function (data) {
+      var myChart = new dimple.chart(svg, data);
+      myChart.setBounds(20, 20, 460, 360)
+      myChart.addMeasureAxis("p", "Worldwide Gross");
+      var ring = myChart.addSeries("Film", dimple.plot.pie);
+      ring.innerRadius = "50%";
+      myChart.addLegend(500, 20, 90, 300, "left");
+      myChart.draw();
+    });
+  </script>
 </div>
