--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         myChart.draw();
       });
   </script>
+</div>
+<div id="secondChartContainer">
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="dist/dimple.v2.1.0.js"></script>
   <script type="text/javascript">
     var svg = dimple.newSvg("#chartContainer", 590, 400);
     var dsv = d3.dsv(";", "text/plain");
