--- a/ejemplo.html
+++ b/ejemplo.html
@@ -1,5 +1,8 @@
 
-<div id="chartContainer">
+<!DOCTYPE html>
+<html>
+<body>
+  <div id="chartContainer">
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="dist/dimple.v2.1.0.js"></script>
   <script type="text/javascript">
@@ -21,3 +24,5 @@
   </script>
 </div>
 <a href="http://ejsandoval.github.io/otroEjemplo.html"> Otro Ejemplo </a>
+</body>
+</html>
