--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 
+<!DOCTYPE html>
+<html>
+<body>
 <div id="secondChartContainer">
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="dist/dimple.v2.1.0.js"></script>
@@ -17,3 +20,5 @@
   </script>
 </div>
 <a href="http://ejsandoval.github.io/ejemplo.html"> Ejemplo </a>
+</body>
+</html>
