--- a/otroEjemplo.html
+++ b/otroEjemplo.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<body>
 <div id="chartContainer">
   <script src="/lib/d3.v3.4.8.js"></script>
   <script src="http://dimplejs.org/dist/dimple.v2.1.2.min.js"></script>
@@ -43,3 +46,5 @@
       });
   </script>
 </div>
+</body>
+</html>
