--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 
-
-<div id="ChartContainer">
+<div id="chartContainer">
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="dist/dimple.v2.1.0.js"></script>
+  <script type="text/javascript">
+  <div></div>
+    var svg = dimple.newSvg("#chartContainer", 590, 590);
+    var dsv = d3.dsv(";", "text/plain");
+    //d3.csv("data/movies.csv", function (data)
+    dsv("data/movies.csv", function (data) {
+        console.table(data);
+        var myChart = new dimple.chart(svg, data);
+        myChart.setBounds(60, 30, 500, 500)
+        myChart.addMeasureAxis("x", "Worldwide Gross");
+        myChart.addMeasureAxis("y", "Budget");
+        myChart.addMeasureAxis("z", "Opening Weekend");
+        myChart.addSeries("Film", dimple.plot.bubble);
+        //myChart.addLegend(200, 10, 360, 20);
+        myChart.draw();
+      });
+  </script>
+</div>
+<div id="secondChartContainer">
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="dist/dimple.v2.1.0.js"></script>
   <script type="text/javascript">
@@ -17,3 +37,4 @@
     });
   </script>
 </div>
+<a href="http://ejsandoval.github.io/ejemplo.html"> Ejemplo </a>
