--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <script src="http://dimplejs.org/dist/dimple.v2.1.2.min.js"></script>
   <script type="text/javascript">
     var svg = dimple.newSvg("#chartContainer", 590, 400);
-      d3.tsv("/data/example_data.tsv", function (data) {
+      d3.tsv("data/example_data.tsv", function (data) {
         
         // Filter the data for a single channel
         data = dimple.filterData(data, "Channel", "Hypermarkets");
