--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     dsv("data/movies.csv", function (data) {
         console.table(data);
         var myChart = new dimple.chart(svg, data);
+        myChart.noFormats = true;
         myChart.setBounds(60, 30, 400, 400)
         myChart.addMeasureAxis("x", "Worldwide Gross");
         myChart.addMeasureAxis("y", "Budget");
