--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         console.table(data);
         var myChart = new dimple.chart(svg, data);
         myChart.noFormats = true;
-        myChart.setBounds(60, 30, 400, 400)
+        myChart.setBounds(60, 30, 400, 400);
         myChart.addMeasureAxis("x", "Worldwide Gross");
         myChart.addMeasureAxis("y", "Budget");
         myChart.addMeasureAxis("z", "Opening Weekend");
