--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         myChart.addMeasureAxis("z", "Opening Weekend");
         myChart.addSeries("Film", dimple.plot.bubble);
         myChart.draw();
+        myChart.defaultColors = [
+            new dimple.color("#333333"),
+            new dimple.color("#666666"),
+            new dimple.color("#999999"),
+            new dimple.color("#BBBBBB"),
+            new dimple.color("#EEEEEE")
+        ]; 
       });
   </script>
 </div>
