--- a/index.html
+++ b/index.html
@@ -1,28 +1,26 @@
+<head>
+  <link href="style.css" rel="stylesheet" />
+</head>
+<body>
+  <div id="chartContainer">
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="dist/dimple.v2.1.0.js"></script>
+    <script type="text/javascript">
+      var svg = dimple.newSvg("#chartContainer", 590, 590);
+      var dsv = d3.dsv(";", "text/plain");
+      //d3.csv("data/movies.csv", function (data)
+      dsv("data/movies.csv", function (data) {
+          console.table(data);
+          var myChart = new dimple.chart(svg, data);
+          myChart.noFormats = true;
+          myChart.setBounds(60, 30, 400, 400);
+          myChart.addMeasureAxis("x", "Worldwide Gross");
+          myChart.addMeasureAxis("y", "Budget");
+          myChart.addMeasureAxis("z", "Opening Weekend");
+          myChart.addSeries("Film", dimple.plot.bubble);
+          myChart.draw();
 
-<div id="chartContainer">
-  <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="dist/dimple.v2.1.0.js"></script>
-  <script type="text/javascript">
-    var svg = dimple.newSvg("#chartContainer", 590, 590);
-    var dsv = d3.dsv(";", "text/plain");
-    //d3.csv("data/movies.csv", function (data)
-    dsv("data/movies.csv", function (data) {
-        console.table(data);
-        var myChart = new dimple.chart(svg, data);
-        myChart.noFormats = true;
-        myChart.setBounds(60, 30, 400, 400);
-        myChart.addMeasureAxis("x", "Worldwide Gross");
-        myChart.addMeasureAxis("y", "Budget");
-        myChart.addMeasureAxis("z", "Opening Weekend");
-        myChart.addSeries("Film", dimple.plot.bubble);
-        myChart.draw();
-        myChart.defaultColors = [
-            new dimple.color("#333333"),
-            new dimple.color("#666666"),
-            new dimple.color("#999999"),
-            new dimple.color("#BBBBBB"),
-            new dimple.color("#EEEEEE")
-        ]; 
-      });
-  </script>
-</div>
+        });
+    </script>
+  </div>
+</body>
