--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
           myChart.addMeasureAxis("x", "Worldwide Gross");
           myChart.addMeasureAxis("y", "Budget");
           myChart.addMeasureAxis("z", "Opening Weekend");
+          myChart.defaultColors = [
+              new dimple.color("#FF0000", "Blue"), // Set a red fill with a blue stroke
+              new dimple.color("#00FF00"), // Set a green fill with a darker green stroke
+              new dimple.color("rgb(0, 0, 255)") // Set a blue fill with a darker blue stroke
+          ]; 
           myChart.addSeries("Film", dimple.plot.bubble);
           myChart.draw();
 
