--- a/ringChart.html
+++ b/ringChart.html
@@ -1,5 +1,6 @@
 <html>
-<div id="chartContainer">
+
+<div id="chartContainer2">
   <script src="/lib/d3.v3.4.8.js"></script>
   <script src="http://dimplejs.org/dist/dimple.v2.1.6.min.js"></script>
   <script type="text/javascript">
