--- a/ringChart.html
+++ b/ringChart.html
@@ -1,7 +1,7 @@
 <html>
 
 <div id="chartContainer2">
-  <script src="/lib/d3.v3.4.8.js"></script>
+  <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="http://dimplejs.org/dist/dimple.v2.1.6.min.js"></script>
   <script type="text/javascript">
     var svg = dimple.newSvg("#chartContainer", 590, 400);
