--- a/ringChart.html
+++ b/ringChart.html
@@ -2,17 +2,17 @@
 
 <div id="chartContainer2">
   <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="http://dimplejs.org/dist/dimple.v2.1.6.min.js"></script>
+  <script src="dist/dimple.v2.1.0.js"></script>
   <script type="text/javascript">
-    var svg = dimple.newSvg("#chartContainer", 590, 400);
+    var svg2 = dimple.newSvg("#chartContainer", 590, 400);
     d3.tsv("/data/example_data.tsv", function (data) {
-      var myChart = new dimple.chart(svg, data);
-      myChart.setBounds(20, 20, 460, 360)
-      myChart.addMeasureAxis("p", "Unit Sales");
+      var myChart2 = new dimple.chart(svg, data);
+      myChart2.setBounds(20, 20, 460, 360)
+      myChart2.addMeasureAxis("p", "Unit Sales");
       var ring = myChart.addSeries("Owner", dimple.plot.pie);
       ring.innerRadius = "50%";
-      myChart.addLegend(500, 20, 90, 300, "left");
-      myChart.draw();
+      myChart2.addLegend(500, 20, 90, 300, "left");
+      myChart2.draw();
     });
   </script>
 </div>
