--- a/ringChart.html
+++ b/ringChart.html
@@ -8,7 +8,7 @@
     <script src="dist/dimple.v2.1.0.js"></script>
     <script type="text/javascript">
       var svg2 = dimple.newSvg("#chartContainer", 590, 400);
-      d3.tsv("/data/example_data.tsv", function (data2) {
+      d3.tsv("data/example_data.tsv", function (data2) {
         var myChart2 = new dimple.chart(svg2, data2);
         myChart2.setBounds(20, 20, 460, 360)
         myChart2.addMeasureAxis("p", "Unit Sales");
