--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="dist/dimple.v2.1.0.js"></script>
     <script type="text/javascript">
+    (function (){
       var svg = dimple.newSvg("#chartContainer", 590, 590);
       var dsv = d3.dsv(";", "text/plain");
       //d3.csv("data/movies.csv", function (data)
@@ -21,9 +22,11 @@
           myChart.draw();
 
         });
+    });
     </script>
 
     <script type="text/javascript">
+    (function(){
       var svg2 = dimple.newSvg("#chartContainer", 590, 400);
       d3.tsv("data/example_data.tsv", function (data) {
         var myChart2 = new dimple.chart(svg2, data);
@@ -34,6 +37,8 @@
         myChart2.addLegend(500, 20, 90, 300, "left");
         myChart2.draw();
       });
+    });
+      
     </script>
   </div>
 </body>
