--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 	<link href="style.css" rel="stylesheet"/>
-	<link href="/js/dimple.v2.1.0.min.js" rel="text/javascript"/>
-	<script src="http://d3js.org/d3.v3.min.js"></script>
 </head>
 <body>
+	<h1>Gráfico Películas</h1>
+	<p>
 	<div id="chartContainer">
     <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="dist/dimple.v2.1.0.js"></script>
+    <script src="js/dimple.v2.1.0.js"></script>
     <script type="text/javascript">
       var svg = dimple.newSvg("#chartContainer", 590, 590);
       var dsv = d3.dsv(";", "text/plain");
