--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
   <div id="chartContainer">
     <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="dist/dimple.v2.1.0.js"></script>
+    <script src="js/dimple.v2.1.0.js"></script>
     <script type="text/javascript">
       var svg = dimple.newSvg("#chartContainer", 590, 590);
       var dsv = d3.dsv(";", "text/plain");
