--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <script type="text/javascript">
       var svg2 = dimple.newSvg("#chartContainer", 590, 400);
-      d3.tsv("data/example_data.tsv", function (data) {
+      d3.tsv("js/example_data.tsv", function (data) {
         var myChart2 = new dimple.chart(svg2, data);
         myChart2.setBounds(20, 20, 460, 360)
         myChart2.addMeasureAxis("p", "Unit Sales");
