--- a/index.html
+++ b/index.html
@@ -1,38 +1,17 @@
-<head>
-  <link href="style.css" rel="stylesheet" />
-</head>
-<body>
-  <div id="chartContainer">
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="js/dimple.v2.1.0.js"></script>
-    <script type="text/javascript">
-      var svg = dimple.newSvg("#chartContainer", 590, 590);
-      var dsv = d3.dsv(";", "text/plain");
-      //d3.csv("data/movies.csv", function (data)
-      dsv("data/movies.csv", function (data) {
-          console.table(data);
-          var myChart = new dimple.chart(svg, data);
-          myChart.setBounds(60, 30, 400, 400);
-          myChart.addMeasureAxis("x", "Worldwide Gross");
-          myChart.addMeasureAxis("y", "Budget");
-          myChart.addMeasureAxis("z", "Opening Weekend");
-          myChart.addSeries("Film", dimple.plot.bubble);
-          myChart.draw();
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Encargo2</title>
+    <script src="libraries/p5.js" type="text/javascript"></script>
 
-        });
-    </script>
+    <script src="libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
-    <script type="text/javascript">
-      var svg2 = dimple.newSvg("#chartContainer", 590, 400);
-      d3.tsv("js/example_data.tsv", function (data) {
-        var myChart2 = new dimple.chart(svg2, data);
-        myChart2.setBounds(20, 20, 460, 360)
-        myChart2.addMeasureAxis("p", "Unit Sales");
-        var ring = myChart2.addSeries("Owner", dimple.plot.pie);
-        ring.innerRadius = "50%";
-        myChart2.addLegend(500, 20, 90, 300, "left");
-        myChart2.draw();
-      });
-    </script>
-  </div>
-</body>
+    <script src="sketch.js" type="text/javascript"></script>
+
+    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+  </head>
+  <body>
+  </body>
+</html>
