--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Encargo2</title>
     <script src="libraries/p5.js" type="text/javascript"></script>
-
+		<script src="libraries/p5.pdf.js" type="text/javascript"></script>
+    <script src="libraries/p5.svg.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
