--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Encargo2</title>
+    <title>MediaLab: Encargo 5</title>
     <link href="style.css" rel="stylesheet"></link>
     <script src="libraries/p5.js" type="text/javascript"></script>
 		<script src="libraries/p5.pdf.js" type="text/javascript"></script>
