--- a/charts/index.html
+++ b/charts/index.html
@@ -22,6 +22,15 @@
         }
       })*/
     </script>
+  <nav>
+    <ul>
+      <li><a href="index.html">Contexto Ambiental</a></li>
+      <li><a href="cti.html">Contexto CTI</a></li>
+      <li><a href="economico.html">Contexto Económico</a></li>
+      <li><a href="sociocultural.html">Contexto Socio-Cultural</a></li>
+      <li><a href="politico.html">Contexto Político</a></li>
+    </ul>
+  </nav>
   <div class="column">
     <div class="viz">
       <h2>Huella Ecólogica de Chile (2000-2016)</h2>
