--- a/charts/cti.html
+++ b/charts/cti.html
@@ -11,6 +11,15 @@
 </head>
 
 <body>
+  <nav>
+    <ul>
+      <li><a href="index.html">Contexto Ambiental</a></li>
+      <li><a href="cti.html">Contexto CTI</a></li>
+      <li><a href="economico.html">Contexto Económico</a></li>
+      <li><a href="sociocultural.html">Contexto Socio-Cultural</a></li>
+      <li><a href="politico.html">Contexto Político</a></li>
+    </ul>
+  </nav>
   <div id="vis_chart1">
     <!--<h2>{{product}} are in stock.</h2>-->
   </div>
