:bug: Fixed paths.

--- a/charts/ambiental.html
+++ b/charts/ambiental.html
@@ -34,7 +34,7 @@
       <p>National Footprint Accounts 2017 (Data Year 2013); World Development Indicators, The World Bank (2016); U.N. Food and Agriculture Organization.</p>
     </div>
   </div>
-    <script type="text/javascript" src="js/ambiental-charts"></script>
+    <script type="text/javascript" src="js/ambiental-charts.js"></script>
 </body>
 
 </html>
