:ribbon: Added navbar.

--- a/charts/ambiental.html
+++ b/charts/ambiental.html
@@ -11,17 +11,15 @@
 </head>
 
 <body>
-  <div id="vis_chart1">
-    <!--<h2>{{product}} are in stock.</h2>-->
-  </div>
-  <script type="text/javascript">
-      /*const app = new Vue({
-        el: '#vis_chart1',
-        data:{
-          product: 'Boots'
-        }
-      })*/
-    </script>
+  <nav>
+    <ul>
+      <li><a href="ambiental.html">Ambiental</a></li>
+      <li><a href="cti.html">CTI</a></li>
+      <li><a href="economico.html">Económico</a></li>
+      <li><a href="politico.html">Político-Institucional</a></li>
+      <li><a href="sociocultural.html">Socio-Cultural</a></li>
+    </ul>
+  </nav>
   <div class="column">
     <div class="viz">
       <h2>Huella Ecólogica de Chile (2000-2016)</h2>
@@ -29,9 +27,44 @@
       <p>National Footprint Accounts 2017 (Data Year 2013); World Development Indicators, The World Bank (2016); U.N. Food and Agriculture Organization.</p>
     </div>
     <div class="viz">
-      <h2>Huella Ecólogica de Chile (2000-2016)</h2>
+      <h2>Emisiones de Dióxido de Carbono (CO2) por habitante</h2>
       <div  id="viz_1"></div>
-      <p>National Footprint Accounts 2017 (Data Year 2013); World Development Indicators, The World Bank (2016); U.N. Food and Agriculture Organization.</p>
+      <p>CEPAL Comisión Económica para América Latina y el Caribe : Cálculos realizados en base a los datos de CDIAC, Proyecto Global de Carbono y CEPALSTAT.</p>
+    </div>
+    <div class="viz">
+      <h2>Emisiones de Dióxido de Carbono (CO2) por cada 1.000 dólares de Producto Interno Bruto</h2>
+      <div  id="viz_2"></div>
+      <p>CEPAL Comisión Económica para América Latina y el Caribe : Cálculos realizados en base a los datos de CDIAC, Proyecto Global de Carbono y CEPALSTAT.</p>
+    </div>
+    <div class="viz">
+      <h2>Emisiones de Dióxido de Carbono (CO2) por cada 1.000 dólares de Producto Interno Bruto</h2>
+      <div id="viz_3"></div>
+      <p>CEPAL Comisión Económica para América Latina y el Caribe : Cálculos realizados en base a los datos de CDIAC, Proyecto Global de Carbono y CEPALSTAT.</p>
+    </div>
+    <div class="viz">
+      <h2>¿Cuán responsables son los siguiente grupos de que el cambio climático esté ocurriendo?</h2>
+      <div id="viz_4"></div>
+      <p>Encuesta Nacional de Medio Ambiente y Cambio Climático, Ministerio de Medio Ambiente y Dirección de estudios Sociales del Instituto de Sociología de la Pontificia Universidad Católica de Chile (2016).</p>
+    </div>
+    <div class="viz">
+      <h2>¿Cuán responsables son los siguientes grupos en la solución del problema del cambio climático?</h2>
+      <div id="viz_5"></div>
+      <p>Encuesta Nacional de Medio Ambiente y Cambio Climático, Ministerio de Medio Ambiente y Dirección de estudios Sociales del Instituto de Sociología de la Pontificia Universidad Católica de Chile (2016).</p>
+    </div>
+    <div class="viz">
+      <h2>Según su percepción ¿Cual es el principal problema ambiental que lo afecta a usted? (2016)</h2>
+      <div id="viz_6"></div>
+      <p>Encuesta Nacional de Medio Ambiente y Cambio Climático, Ministerio de Medio Ambiente y Dirección de estudios Sociales del Instituto de Sociología de la Pontificia Universidad Católica de Chile (2016 y 2018).</p>
+    </div>
+    <div class="viz">
+      <h2>Según su percepción ¿Cual es el principal problema ambiental que lo afecta a usted? (2018)</h2>
+      <div id="viz_7"></div>
+      <p>Encuesta Nacional de Medio Ambiente y Cambio Climático, Ministerio de Medio Ambiente y Dirección de estudios Sociales del Instituto de Sociología de la Pontificia Universidad Católica de Chile (2016 y 2018).</p>
+    </div>
+    <div class="viz">
+      <h2>Emisiones de Dióxido de Carbono (CO2) por cada 1.000 dólares de Producto Interno Bruto</h2>
+      <div id="viz_8"></div>
+      <p>CEPAL Comisión Económica para América Latina y el Caribe : Cálculos realizados en base a los datos de CDIAC, Proyecto Global de Carbono y CEPALSTAT.</p>
     </div>
   </div>
     <script type="text/javascript" src="js/ambiental-charts.js"></script>
