--- a/charts/cti.html
+++ b/charts/cti.html
@@ -11,18 +11,15 @@
 </head>
 
 <body>
-  <div id="vis_chart1">
-    <!--<h2>{{product}} are in stock.</h2>-->
-  </div>
-  <script type="text/javascript">
-      /*const app = new Vue({
-        el: '#vis_chart1',
-        data:{
-          product: 'Boots'
-        }
-      })*/
-    </script>
-    
+  <nav>
+    <ul>
+      <li><a href="ambiental.html">Ambiental</a></li>
+      <li><a href="cti.html">CTI</a></li>
+      <li><a href="economico.html">Económico</a></li>
+      <li><a href="politico.html">Político-Institucional</a></li>
+      <li><a href="sociocultural.html">Socio-Cultural</a></li>
+    </ul>
+  </nav>
   <div class="column">
     <div class="viz">
       <h2>Evolución actividad emprendedora (2005-2016)</h2>
@@ -65,6 +62,18 @@
       <div  id="viz_6">
       </div>
       <p>Encuesta de Percepción de la ciencia, CONICYT 2016. Página 36</p>
+    </div>
+    <div class="viz">
+      <h2>Motivación al momento de iniciar un negocio (años 2007-2016)</h2>
+      <div  id="viz_7">
+      </div>
+      <p>Global Entrepreneurship Monitor (GEM) -Reporte Nacional de Chile 2016. GEM APS, 2016. Instituto del Emprendimiento de la Facultad de Economía y Negocios de la Universidad del Desarrollo.</p>
+    </div>
+    <div class="viz">
+      <h2>Percepción de oportunidades, intención de emprender, percepción de capacidades y miedo al fracaso</h2>
+      <div  id="viz_8">
+      </div>
+      <p>Global Entrepreneurship Monitor (GEM) -Reporte Nacional de Chile 2016. GEM APS, 2016. Instituto del Emprendimiento de la Facultad de Economía y Negocios de la Universidad del Desarrollo.</p>
     </div>
   </div>
   <script src="js/cti-charts.js"></script>
